# junit2json-rust

./: Cargo.toml  README.md  renovate.json  setup-tools-devcontainer.sh
.config/: nextest.toml
.devcontainer/: devcontainer.json  setup-tools.sh
.github/workflows/: ci.yml  release.yml
src/: cli.rs  lib.rs  main.rs  quick.rs
tests/: deserialize.rs  filter_tags.rs  serialize.rs  snapshot.rs
tests/fixtures/: cargo-nextest.xml  jest-success.xml
tests/snapshots/: snapshot__fixtures_snapshot@android-robolectric-success.xml.snap  snapshot__fixtures_snapshot@cargo-nextest.xml.snap  snapshot__fixtures_snapshot@jest-failure.xml.snap  snapshot__fixtures_snapshot@jest-success.xml.snap  snapshot__fixtures_snapshot@nunit-failure.xml.snap
