[package]
name = "junit2json"
version = "0.2.5"
edition = "2021"
authors = ["Kenta Kase <kesin1202000@gmail.com>"]
license = "MIT"
description = "A tool convert JUnit XML format to JSON with Rust"
repository = "https://github.com/Kesin11/junit2json-rs"
homepage = "https://github.com/Kesin11/junit2json-rs"
keywords = ["junit"]
categories = ["development-tools::testing"]

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.113"
serde_with = "3.6.1"
quick-xml = { version = "0.31.0", features = ["serialize", "serde-types"] }
clap = { version = "4.5.1", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
insta = { version = "1.34.0", features = ["json", "glob"] }

[package.metadata.release]
pre-release-commit-message = "[skip ci]: Release {{crate_name}} version {{version}}"
